--- a/BOLCSharpHelper/BOLCSharpHelper.csproj
+++ b/BOLCSharpHelper/BOLCSharpHelper.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Bugsonline" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
